# Wavelink

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yml  GitHub_Internships_Updates-1.vcf  LICENSE  README.md  README.rst  mkdocs.yml  mypy.ini  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: build_and_publish.yml  coverage_and_lint.yml  edit_version.py  get_revision.py  publish.yml
Wavelink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  api.rst  conf.py  faq.rst  index.md  index.rst  installing.rst  make.bat  migrating.rst  recipes.rst  requirements.txt  requirements_rtd.txt  wavelink.rst
docs/_pages/getting-started/: installing.md
docs/_pages/references/: enums.md
docs/_static/: style.css
docs/_static/js/: custom.js
docs/_static/styles/: furo.css
docs/_templates/: layout.html
docs/ext/: spotify.rst
docs/extensions/: attributetable.py  details.py  exception_hierarchy.py  prettyversion.py
docs/exts/: spotify.rst
docs/stylesheets/: extra.css
examples/: advanced.py  basic.py  basic_cog.py  basic_queue.py  connecting.py  filtered_tracks.py  playlist.py  queue.py  simple.py  spotify_autoplay.py
examples/advanced/: LICENSE  advanced.py
wavelink/: __init__.py  __main__.py  abc.py  backoff.py  client.py  enums.py  eqs.py  equalizer.py  errors.py  events.py  exceptions.py  filters.py  lfu.py  meta.py  node.py  payloads.py  playable.py  player.py  pool.py  queue.py  stats.py  track.py  tracks.py  utils.py  websocket.py
wavelink/examples/: connecting.py  simple.py  spotify_autoplay.py
wavelink/ext/spotify/: __init__.py  utils.py
wavelink/types/: __init__.py  events.py  filters.py  playable.py  queue.py  request.py  response.py  state.py  stats.py  track.py  tracks.py  websocket.py
