[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavelink"
version = "3.0.0"
authors = [
  { name="PythonistaGuild, EvieePy", email="evieepy@gmail.com" },
]
dynamic = ["dependencies"]
description = "A robust and powerful, fully asynchronous Lavalink wrapper built for discord.py in Python."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/PythonistaGuild/Wavelink"

[tool.setuptools]
packages = ["wavelink", "wavelink.types"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
wavelink = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
ignore = ["test*.py", "examples/*.py", "docs/*"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = false
