[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavelink"
version = "3.5.1"

authors = [{ name = "PythonistaGuild, EvieePy", email = "evieepy@gmail.com" }]
dynamic = ["dependencies"]
description = "A robust and powerful, fully asynchronous Lavalink wrapper built for discord.py in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/PythonistaGuild/Wavelink"

[tool.setuptools]
packages = ["wavelink", "wavelink.types"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
wavelink = ["py.typed"]

[dependency-groups]
dev = ["ruff>=0.15.10"]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["venv", "docs/"]

[tool.ruff.lint]
select = [
    "ANN",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "PERF",
    "PTH",
    "RUF",
    "SIM",
    "TC",
    "UP",
    "W",
]
ignore = [
    "ANN401",  # we allow `Any` type
    "E203",    # we allow whitespace separation after commas, etc
    "F403",    # allowing manual dict comprehension
    "F405",    # star imports are used commonly here
    "PERF203", # allowing try-except blocks in loops is allowed here, performance hit is negligible
    "RUF006",  # due to the nature of the library we allow dangling tasks to be cleaned up eagerly
    "SIM105",  # contextlib.suppress is a performance hit and try-except is preferred.
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = ["venv", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
ignore = ["test*.py", "examples/*.py", "docs/*"]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
pythonVersion = "3.10"
